--- a/client/src/Components/Sidebar/Sidebar.css
+++ b/client/src/Components/Sidebar/Sidebar.css
@@ -7,9 +7,11 @@
     top: 450px;
     font-family: Montserrat;
     margin-left: 20px;
-    border-radius: 50px;
+    border-radius: 25px;
     display: flex;
     flex-direction: column;
+    overflow-y: scroll;
+    flex: 1;
 }
 
   #Sidebar .closemenu {
