--- a/client/src/Components/Cards-Users/Cards-Users.css
+++ b/client/src/Components/Cards-Users/Cards-Users.css
@@ -1,9 +1,9 @@
 .usuario-card{
     display: flex;
     margin: 4vw;
-    background-color: rgb(214, 226, 233);
-
+    background-color: rgb(253, 253, 253);
     justify-content: space-between;
+    border-radius: 10px;
 }
 
 .name-user{
@@ -20,9 +20,14 @@
     margin: 1vw;
 }
 .boton-convertir2{
-    background-color: rgb(236, 236, 236);
+    background-color: rgba(253, 209, 128, 0.788);
     border-radius: 8px;
-    padding: 0.2vw;
+    padding: 0.4vw;
     width: fit-content;
+    
+}
+.boton-convertir2:hover{
+    background-color: rgba(253, 232, 191, 0.959);
+    
     
 }
