--- a/client/src/Components/Footer/Footer.css
+++ b/client/src/Components/Footer/Footer.css
@@ -1,6 +1,6 @@
 footer {
     font-family: "Montserrat";
-    height: 15vw;
+    height: 17vw;
     display: flex;
    /*  
     background-color: darkorange; */
@@ -8,6 +8,7 @@ footer {
     grid-template-columns: 30% 70%;
     background-color: #F1EEDE;
     padding: 3vw;
+    
 
    
 }
@@ -41,10 +42,13 @@ a:hover {
 
 
 .safety-footer{
-    font-size: 0.8vw;
+    font-size: 1vw;
     font-family: "Montserrat";
+    font-style: italic;
+    font-weight: 600;
     align-self: center;
     padding-bottom: 2vw;
+    padding-top: 1vw;
       
 }
 
@@ -53,9 +57,12 @@ a:hover {
     flex-direction: column;
     align-content: center;
     justify-content: center;
+    
+    padding-top: 3vw;
 }
 
 .footer-logo {
     align-self: center;
+    height: 7vw;
 }
 
