--- a/client/src/Components/Header/Header.css
+++ b/client/src/Components/Header/Header.css
@@ -1,11 +1,12 @@
 .conteinerImg {
     display: flex;
-    height: 50vw;
+    height: 40vw;
     flex-direction: column;
     /* background-color: coral; */
     background-color: #F1EEDE;
     z-index: -1;
-    padding: 2vw 5vw 3vw 5vw;
+    padding: 6vw 4vw 2vw 4vw;
+    
     
 }
 
@@ -14,14 +15,27 @@
     width: 75vw;
     height: auto;
     align-self: center;
+    z-index: 2;
+    margin-top: -10vw;
     
     
 }
 
-.textS {
+.titulo-header {
     
-    font-family: Raleway;
-    font-size: 5vw;
+    font-family: 'Josefin Sans', sans-serif;
+    font-size: 15vw;
+    align-self: center;
+    color: #5b2d7e;
+    z-index: 1;
+    
 
 }
-
+.subtitulo{
+    font-family: 'Josefin Sans', sans-serif; 
+    margin-top: -18vw;
+    margin-left: 10vw; 
+    z-index: 10;
+    width: 10vw;
+    font-size: 1.5vw;
+}
