--- a/client/src/Components/NavBar/NavBar.css
+++ b/client/src/Components/NavBar/NavBar.css
@@ -1,14 +1,14 @@
 .container-nav{
-    min-height: 10vh;
-    max-height: 20vh;
+    height: 5vw;
     max-width: 100vw;
     display:flex;
     align-items: center;
     font-size: 1vw;
     font-family: "Montserrat";
     background-color: #F1EEDE;
-    padding: 5vw;
-    /* position: fixed; */
+    padding: 4vw;
+    position: fixed; 
+    z-index: 15;
     
 }
 h1{
@@ -19,19 +19,22 @@ a{
     text-decoration: none;
     font-weight: bolder;
     color: black;
+    
+    
 }
 ul{
     display: flex;
     list-style: none;
     width: 90vw;
     justify-content: space-around;
+    
 }
 
 .logo{
     font-size: 3vw;
-    align-self: center;
     font-family: "Raleway";
-    margin-top: 1rem;
+    margin-top: -3vw;
+    
 }
 
 .nav-line{
@@ -39,4 +42,32 @@ ul{
         height: 2px;
         width: 9vw;
         margin-top: 10px;
+}
+.foro-line{
+    background: #f17a09;
+        height: 2px;
+        width: 3vw;
+        margin-top: 10px;
+}
+
+.iniciasesion{
+    background-color: #f5b880;
+    padding: 0.5vw;
+    border-radius: 10px;
+}
+.iniciasesion:hover{
+    background-color: #ff9d41;
+    padding: 0.5vw;
+    border-radius: 10px;
+}
+
+.ul-nav{
+    justify-content: space-around;
+    width: 90vw;
+    
+    
+}
+
+.icono-ola {
+    height: 4.5vw;
 }
