--- a/client/src/Pages/LugaresSeguros.css
+++ b/client/src/Pages/LugaresSeguros.css
@@ -6,9 +6,13 @@ Map {
     font-family: Montserrat;
     justify-content: center;
     text-align: center;
-    margin-top: 0px;
+    padding-top: 22vw;
     display: flex;
     flex-direction: column;
+    height: 150vh;
+    background-color: #F1EEDE;
+    padding-bottom: 10vw;
+    
 } 
 .btnainput{
     background-color: #FEA166;
@@ -45,7 +49,7 @@ Map {
     
 }
 
-.subtitulo{
+.subtitulo-mapa{
     display: flex;
     font-size: 1.4vw;
     justify-content: center;
