--- a/client/src/Pages/Registro-Usuario/Registrate.css
+++ b/client/src/Pages/Registro-Usuario/Registrate.css
@@ -3,6 +3,7 @@
   font-family: Montserrat;
   display: flex;
   flex-direction: column;
+  padding-top: 10vw;
 }
 .line-registrate{
   background: #f17a09;
