--- a/client/src/Pages/Panel-Admin/Panel.css
+++ b/client/src/Pages/Panel-Admin/Panel.css
@@ -3,6 +3,7 @@
     background-color: #F1EEDE;
     font-family: Montserrat;
     min-height: 40vw;
+    padding-top: 10vw;
 }
 .fondopanel{
     margin: 5vw;
