--- a/client/src/Components/ForoNoticias/ForoNoticias.css
+++ b/client/src/Components/ForoNoticias/ForoNoticias.css
@@ -10,6 +10,7 @@
     text-align: center;
     align-self: center; 
     margin-bottom: 0.5vw;
+
 }
 .foroNoticias-line{
     background: #f17a09;
@@ -18,30 +19,35 @@
     margin-top: 0;
     align-self: center; 
     margin-bottom: 2vw;
-    
 }
 .imgNotamujeres{
-    width: 71vw;
+    width: 76vw;
     height: auto;
     align-self: center;
     margin-left: auto; 
     margin-right: auto;
- 
-    
+    margin-top: 40px;    
 }
 .titulonoti{
-    font-size: 1.8vw;
-    margin-left: -350px;
+    font-size: 2vw;
     align-self: center;
-    margin-top: 1vw; 
+ 
     margin-bottom: 0.5vw;
+    margin-left: 6.5vw;
+    font-weight: bold;
+}
+.date{
+    margin-left: 950px;
+}
+.tittleydate{
+    margin-top: 1vw;  
 }
 .rectangulonoticia {
     background-color: #FFFFFF;
     margin:auto;
     box-shadow: 0 0 1rem rgba(128, 128, 128, 0.3);
     width: 1000px; 
-    height: 500px; 
+    height: fit-content; 
     border-radius: 20px;
 }
 .parrafonoti{
