--- a/client/src/Components/ForoNoticias/ForoNoticias.css
+++ b/client/src/Components/ForoNoticias/ForoNoticias.css
@@ -1,9 +1,10 @@
-.proyectocontainer{
-    padding: 1vw 5vw 1vw 5vw;
+.pc{
+    padding: 50vw 5vw 1vw 5vw;
     background-color: #F1EEDE;
     font-family: Montserrat;
     display: flex;
     flex-direction: column;
+    /* margin-top: 150px; */
 }
 .tituloforo{
     font-size: 3vw;
