--- a/client/src/Pages/Usuarios/Usuarios.css
+++ b/client/src/Pages/Usuarios/Usuarios.css
@@ -7,6 +7,7 @@
     font-family: "Montserrat";
     display: flex;
     flex-direction: column;
+    padding: 10vw;
 }
 .titulo-administrar{
     background-color: #F1EEDE;
