--- a/client/src/Components/Footer/Footer.css
+++ b/client/src/Components/Footer/Footer.css
@@ -1,68 +1,62 @@
 footer {
-    font-family: "Montserrat";
-    height: 17vw;
-    display: flex;
-   /*  
+  font-family: "Montserrat";
+  height: 17vw;
+  display: flex;
+  /*  
     background-color: darkorange; */
-    display: grid;
-    grid-template-columns: 30% 70%;
-    background-color: #F1EEDE;
-    padding: 3vw;
-    
-
-   
+  display: grid;
+  grid-template-columns: 30% 70%;
+  background-color: #f1eede;
+  padding: 3vw;
+  margin-top: 200px;
 }
 
-.footer-ul{
-    list-style: none;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    font-size: 0.9vw;
-    
-    width: 20vw;
-    margin-left: 40vw;
-    font-weight: 700;
-    
-} 
-li{
-    align-self: flex-start;
+.footer-ul {
+  list-style: none;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  font-size: 0.9vw;
+
+  width: 20vw;
+  margin-left: 40vw;
+  font-weight: 700;
+}
+li {
+  align-self: flex-start;
 }
 
 /*  */
 
-a{
-    color: black;
-    text-decoration: none;
+a {
+  color: black;
+  text-decoration: none;
 }
 
 a:hover {
-    color: rgb(74, 22, 122);
+  color: rgb(74, 22, 122);
 }
 
-
-.safety-footer{
-    font-size: 1vw;
-    font-family: "Montserrat";
-    font-style: italic;
-    font-weight: 600;
-    align-self: center;
-    padding-bottom: 2vw;
-    padding-top: 1vw;
-      
+.safety-footer {
+  font-size: 1vw;
+  font-family: "Montserrat";
+  font-style: italic;
+  font-weight: 600;
+  align-self: center;
+  padding-bottom: 2vw;
+  padding-top: 1vw;
 }
 
 .logo {
-    display: flex;
-    flex-direction: column;
-    align-content: center;
-    justify-content: center;
-    
-    padding-top: 3vw;
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  justify-content: center;
+
+  padding-top: 3vw;
 }
 
 .footer-logo {
-    align-self: center;
-    height: 7vw;
+  align-self: center;
+  height: 7vw;
 }
-
