--- a/client/src/Components/Sidebar/Sidebar.css
+++ b/client/src/Components/Sidebar/Sidebar.css
@@ -1,139 +1,107 @@
-#Sidebar {
-    /* width: 400px; */
-    height: 700px;
-    justify-content: center;
-    position: absolute;
-    z-index: 5;
-    top: 450px;
-    font-family: Montserrat;
-    margin-left: 20px;
-    border-radius: 25px;
-    display: flex;
-    flex-direction: column;
-    overflow: auto !important; 
-    flex: 1;
-}
 
 .contenedorsidebar {
-  overflow-y: auto;
+  width: 350px;
+  height: 700px;
+  justify-content: center;
+  position: absolute;
+  z-index: 5;
+  top: 450px;
+  font-family: Montserrat;
+  margin-left: 20px;
+  border-radius: 25px;
+  display: flex;
+  flex-direction: column;
+  overflow-y: scroll;
+  margin-bottom: 12px; 
+  background-color: white;
+  margin-top: 160px;
+  padding: 3vh;
 }
 
-  #Sidebar .closemenu {
-    color: #000;
-    position: absolute;
-    margin-top: 230px;
-    margin-left: 210px;
-    border-radius: 50%;
-    font-weight: bold;
-    font-size: 40px;
-    cursor: pointer;
-  }
-  /* #Sidebar .pro-sidebar {
-    width: 100%;
-    min-width: 100%;
-    z-index: 5;
-  } */
-  #Sidebar .pro-sidebar.collapsed {
-    width: 80px;
-    min-width: 80px;
-    
-  }
-  #Sidebar .pro-sidebar-inner {
-    background-color: rgba(255, 255, 255, 0.856);
-    box-shadow: 0.5px 0.866px 2px 0px rgba(0, 0, 0, 0.15);
-  }
-  #Sidebar .pro-sidebar-inner .pro-sidebar-layout {
-    overflow-y: hidden;
-  }
-  #Sidebar .pro-sidebar-inner .pro-sidebar-layout .logotext p {
-    font-size: 40px;
-    font-family: Montserrat;
-    display: flex;
-    justify-content: center;
-    color: #000;
-    font-weight: bold;
-  }
-  /* #Sidebar .pro-sidebar-inner .pro-sidebar-layout ul {
-    padding: 0 5px;
-  } */
-  /* #Sidebar .pro-sidebar-inner .pro-sidebar-layout ul .pro-inner-item {
-    color: #000;
-    font-weight: bold;
-    font-size: 100px;
-  } */
-  /* #Sidebar .pro-sidebar-inner .pro-sidebar-layout ul .pro-inner-item .pro-icon-wrapper {
-    background-color: #fbf4cd;
-    color: #000;
-    border-radius: 3px;
-  } */
-  /* #Sidebar .pro-sidebar-inner .pro-sidebar-layout ul .pro-inner-item .pro-icon-wrapper .pro-item-content {
-    color: #000;
-    font-size: 100px;
-    background-color: black;
-  } */
-  /* #Sidebar .pro-sidebar-inner .pro-sidebar-layout .active {
-    background-image: linear-gradient(0deg, #fece00 0%, #ffe172 100%);
-  } */
-  /* #Sidebar .logo {
-    padding: 20px;
-  } */
+.btnSide {
+    text-align: center;
+    color: black;
+    margin-left: 260px;
+    margin-top: -15px;
+    background-color: rgba(250, 7, 7, 0.479);
+    width: 35px;
+    height: 35px;
+    border-radius: 100%;
+}
 
-  .btnSide {
-      color: black;
-      margin-left: 230px;
-      margin-top: 15px;
-      background-color: rgba(250, 7, 7, 0.479);
-      width: 25px;
-      height: 25px;
-      border-radius: 100%;
-  }
+.info {
+  font-size: 100px;
+}
 
-  .info {
-    font-size: 100px;
+.princip {
+  font-size: 40px;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+
+.txtyicon {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.txtyicon2 {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  margin-top: 25px;
+}
+
+.icono {
+  width: 40px;
+  height: 40px;
 }
 
 .txt1 {
-  font-size: 20px;
+  font-size: 22px;
   color: #000;
   font-family: Montserrat;
-  display: flex;
-  justify-content: center;
 }
-  
+
+
 .txt2 {
   font-size: 20px;
   color: #000;
-  font-weight: bold;
+  font-weight: 100px;
   display: flex;
   justify-content: center;
 }
 
 .kw {
-  font-size: 18px;
+  font-size: 25px;
   color: #000;
-  font-weight: bold;
   font-family: Montserrat;
-  display: flex;
-  justify-content: center;
+}
+
+.keyword {
+  font-size: 30px;
+  text-transform: uppercase;
+  color: rgb(71, 22, 71);
+  font-weight:bold;
 }
 
 .cont {
-  background-color: #c9bcdf;
   border-radius: 15px;
   width: 205px;
-  margin-left: 32px;
+  margin: auto;
+  margin-top: 40px;
 }
 
-.iconnn {
-  margin-top: 4px;
-  margin-right: 8px;
+
+.iconnn1 {
+  margin-right: 200px;
 }
 
 .titleLine{
   background: #f17a09;
   height: 3px;
-  width: 130px;
-  margin-left: 70px;
+  width: 170px;
+  margin: auto;
 }
 
 .denuncia {
@@ -142,20 +110,24 @@
 }
 
 .denunciaTit {
-  display: flex;
-  justify-content: center;
   color: #000;
 }
 
 .btnRes {
   background-color: #f17909;
-  width: 180px;
+  width: 210px;
   height: 50px;
   color: #000;
   border-radius: 15px;
   border-color: #000;
-  margin-left: 45px;
 }
+
+.cont-res {
+  margin: auto;
+  margin-top: 1px;
+}
+
+
 .btnRes:hover {
   background-color: #f39843d8;
   
@@ -170,45 +142,27 @@
   background-color: rgb(243, 48, 48);
 }
 
-  @media only screen and (max-width: 720px) {
-    html {
-      overflow: hidden;
-    }
-  }
+.cont-denuncia {
+  margin: auto;
+  margin-top: -20px;
+}
 
 .sidebar-align{
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  background-color: rgb(243, 243, 243);
-  margin-top: 3vw;
-  margin-bottom: 3vw;
-  justify-items: center;
 }
 
 .denunciar{
-  
-  justify-content: center;
-  padding: 1vw;
-  text-align: center;
-  font-style: italic;
-  font-weight: 500;
   color: #000;
   
 }
 .comentario {
-  
-  
     justify-content: center;
-    padding: 1vw;
     text-align: center;
     background-color: #f17909;
     font-weight: 500;
     color: #000;
-    margin: 1vw;
     border-radius: 10px;
-    
-  
 }
 
 a.comentario:hover{
