--- a/client/src/Components/Sidebar/Comments.css
+++ b/client/src/Components/Sidebar/Comments.css
@@ -1,14 +1,14 @@
 .commentsCont {
     display: flex;
     justify-content: center;
+    margin: auto;
+    margin-top: 10px;
 }
 
 .conte {
-    background-color: #f179092c;
-    margin: 10px;
-    width: 205px;
-    height: 80px;
-    text-align:center;
-    border-radius: 25px;
-    color: black;
+    background-color: #FFFFFF;
+    box-shadow: 0 0 1rem rgba(51, 51, 51, 0.404);
+    width: 300px; 
+    height: fit-content; 
+    border-radius: 8px;
 }
