--- a/client/src/Components/Sidebar/Sidebar.css
+++ b/client/src/Components/Sidebar/Sidebar.css
@@ -1,4 +1,11 @@
 
+.scroll-side {
+  overflow: scroll;
+  transition: 0.5s;
+  animation: ease-in;
+  height: 100vh;
+}
+
 .contenedorsidebar {
   width: 350px;
   height: 700px;
@@ -11,11 +18,12 @@
   border-radius: 25px;
   display: flex;
   flex-direction: column;
-  overflow-y: scroll;
+  flex: 0 0 100%;
   margin-bottom: 12px; 
   background-color: white;
   margin-top: 160px;
   padding: 3vh;
+
 }
 
 .btnSide {
@@ -167,4 +175,19 @@
 
 a.comentario:hover{
   background-color: #e79f5b;
+}
+
+.commentsCont {
+  display: flex;
+  justify-content: center;
+  margin: auto;
+  margin-top: 10px;
+}
+
+.conte {
+  background-color: #FFFFFF;
+  box-shadow: 0 0 1rem rgba(51, 51, 51, 0.404);
+  width: 300px; 
+  height: fit-content; 
+  border-radius: 8px;
 }
