--- a/client/src/Pages/LugaresSeguros.css
+++ b/client/src/Pages/LugaresSeguros.css
@@ -18,12 +18,14 @@ Map {
     background-color: #FEA166;
     z-index: 10;
     position: absolute;
-    top: 400px;
-    left: 80vw;
     width: fit-content;
     padding: 0.5vw;
-
+    margin-top: -80px;
 }
+
+.btnainput:hover {
+    transform: scale(1.20);
+    transition: 0.8s;}
 
 .parrafo {
     align-self: center;
@@ -64,8 +66,9 @@ Map {
 }
 
 .imagen-casa{
-    height: 2.5vw;
-    margin-left: 1vw;
+    margin-left: 0.4vw;
+    margin-top: -10px;
+    height: 50px;
 }
 
 
