--- a/client/src/Pages/User-Profile-Page/Content/AccountSetting.css
+++ b/client/src/Pages/User-Profile-Page/Content/AccountSetting.css
@@ -47,17 +47,41 @@
 .btn1 {
     background-color: #FEA166;
     color: rgb(0, 0, 0);
-    transition: 250ms;
-    box-shadow: #494441b2;
+    box-shadow: 0 0 1rem rgba(51, 51, 51, 0.404);
     border-radius: 20px;
-    width: 180px;
-    height: 40px;
+    width: 230px;
+    height: 50px;
     font-family: Montserrat;
     font-size:17px;
     font-weight: bold;
     border-color: transparent;
     margin-top: 30px;
-    margin-left: 150px;
-    display: flex;
-    justify-content: center;
+    margin-left: 70px;
+    text-align: center;
+}
+
+.btn1:hover {
+    transform: scale(1.1);
+    transition: 0.3s;
+}
+
+.btn2 {
+    background-color: #FEA166;
+    color: rgb(0, 0, 0);
+    box-shadow: 0 0 1rem rgba(51, 51, 51, 0.404);
+    border-radius: 20px;
+    width: 230px;
+    height: 50px;
+    font-family: Montserrat;
+    font-size:17px;
+    font-weight: bold;
+    border-color: transparent;
+    margin-top: 30px;
+    margin-left: 70px;
+    text-align: center;
+}
+
+.btn2:hover {
+    transform: scale(1.1);
+    transition: 0.3s;
 }
