--- a/client/src/Components/Mujeres_en_Salud/HealtCard.css
+++ b/client/src/Components/Mujeres_en_Salud/HealtCard.css
@@ -1,36 +1,20 @@
-.fondocardsalud{
-    width: 10vw;
-    background-color: aquamarine;    
-}
-
-.card-style {
-    background-color: rgb(252, 242, 231);
+.card-style-salud {
+   background-color: #FFFFFF;
+    filter:alpha(opacity=70);
     margin: 0.9vw;
+    margin-top: 29px;
     border-radius: 20px;
     width: 20vw;
     border: gray;
     display: flex;
     flex-direction: column;
-    
     text-align: center;
     height: fit-content;
     padding: 2vw;
     box-shadow: 1px 1px 8px rgb(201, 201, 201);
     line-height: 2vw;
     flex-wrap: wrap;   
-    
-}
-
-.span-card {
-    font-weight: 900;
-}
-.status-card {
-    background-color: rgb(243, 233, 142);
-    border-radius: 15px;
-    text-transform: uppercase;
-    margin-bottom: 1vw;
-    font-size: 1vw;
-    
+    position: relative;
 }
 .linea-card{
     height: 0.1vw;
@@ -41,10 +25,14 @@
     
 }
 .salud-name{
+    color: #878BD9;
+    font-weight: bold;
     font-size: 1.5vw;
     text-align: center;
 }
 .profession-card{
+    color: #4A0E79;
+    font-weight: bold;
     margin-top: 5px;
     font-size: 1.2vw;
     text-align: center;
@@ -52,4 +40,12 @@
 
 .matricula-card{
     font-size: 1vw;
+    color: #4A0E79;
+}
+.iconosalud{
+    width: 90px;
+    height: 90px;
+    margin-left: auto; 
+    margin-right: auto;
+    margin-bottom: auto;
 }
