--- a/client/src/Components/Mujeres_en_Salud/SearchBarHealt.css
+++ b/client/src/Components/Mujeres_en_Salud/SearchBarHealt.css
@@ -24,26 +24,35 @@
     border: 1px solid #C4C4C4;
     background-color:  #FFFFFF;
     transition: 250ms;
-    text-align: center;
+    text-align-last: center;
     border-radius: 20px;
     width: 400px;
     height: 52px;
     margin-top: 40px;
+    margin-left: 800px;
     font-size: 20px; 
     color: #a09e9e;
 }
+
 .btnregistrosalud{
     border:  1px solid #FEA166;
     background-color: #FEA166;
+    color: #4A0E79;
     width: 364px;
     height: 52px; 
     border-radius:20px;
     margin-top: 20px;
-    margin-bottom: 20px;
-    margin-left: -840px;
-    justify-content:center;
-    align-items:center;
+    margin-left: 40px;
     align-content: center;
-    display:fixed;
+    display:flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
     font-size: 25px;
 }
+.home-salud {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: flex-start;
+  }
