--- a/client/src/Components/Sidebar/Sidebar.css
+++ b/client/src/Components/Sidebar/Sidebar.css
@@ -1,14 +1,7 @@
 
-.scroll-side {
-  overflow: scroll;
-  transition: 0.5s;
-  animation: ease-in;
-  height: 100vh;
-}
-
 .contenedorsidebar {
   width: 350px;
-  height: 700px;
+  height: 800px;
   justify-content: center;
   position: absolute;
   z-index: 5;
@@ -21,7 +14,7 @@
   flex: 0 0 100%;
   margin-bottom: 12px; 
   background-color: white;
-  margin-top: 160px;
+  margin-top: 140px;
   padding: 3vh;
 
 }
@@ -188,6 +181,12 @@ a.comentario:hover{
   background-color: #FFFFFF;
   box-shadow: 0 0 1rem rgba(51, 51, 51, 0.404);
   width: 300px; 
-  height: fit-content; 
+  height: 40px; 
   border-radius: 8px;
+}
+
+.comm-scrll {
+  overflow-y: scroll;
+  max-height: 20vh;
+
 }
