--- a/client/src/Components/Footer/Footer.css
+++ b/client/src/Components/Footer/Footer.css
@@ -8,7 +8,7 @@ footer {
   grid-template-columns: 30% 70%;
   background-color: #f1eede;
   padding: 3vw;
-  margin-top: 200px;
+  margin-top: 1vw;
 }
 
 .footer-ul {
