--- a/client/src/Components/Mujeres_en_Salud/SearchBarHealt.css
+++ b/client/src/Components/Mujeres_en_Salud/SearchBarHealt.css
@@ -29,7 +29,7 @@
     width: 400px;
     height: 52px;
     margin-top: 40px;
-    margin-left: 800px;
+    margin-left: 30px;
     font-size: 20px; 
     color: #a09e9e;
 }
@@ -55,4 +55,6 @@
     flex-wrap: wrap;
     justify-content: space-evenly;
     align-items: flex-start;
+    overflow-y: scroll;
+    max-height: 30vw;
   }
