--- a/client/src/Components/Carrusel/Carrusel.css
+++ b/client/src/Components/Carrusel/Carrusel.css
@@ -1,4 +1,6 @@
 .slider{
+  display: flex;
+  flex-direction: column;
     justify-content:center;
     align-items:center;
   }
@@ -36,5 +38,5 @@
   .slide.active{
     opacity:1;
     transition-duration:1s;
-    transform:scale(1:20);
+    /* transform: scale(1:20); */
   }
