--- a/client/src/Components/ForoNoticias/FailedSearch.css
+++ b/client/src/Components/ForoNoticias/FailedSearch.css
@@ -1,15 +1,19 @@
-.proyectocontainer{
-    padding: 1vw 5vw 1vw 5vw;
+.proyectocontainer99{
+    padding: 70vw;
     background-color: #F1EEDE;
     font-family: Montserrat;
     display: flex;
     flex-direction: column;
+    background-color: #f17a09;
+    margin-top: 20vw;
 }
 .tittleforo{
-    font-size: 3vw;
+    
     text-align: center;
     align-self: center; 
     margin-bottom: 0.5vw;
+    padding-top: 10vw;
+    
 }
 .foroNoticias-line{
     background: #f17a09;
@@ -21,23 +25,10 @@
     margin-left: 575px;
 }
 .error{
-    font-size: 40px; 
+    font-size: 2vw; 
     text-align: center;
 }
-.btnsearch{
-    width: 150px;
-    height: 45px; 
-    border-radius:20px;
-    margin-left: 40px;
-    margin-top: 15px;
-    justify-content:center;
-    align-items:center;
-    align-content: center;
-    display:fixed;
-    font-size: 25px;
-    color: #878BD9;
-    font-weight: bold;
-}
+
 .inputsearch{
     /* border:  1px solid #C4C4C4; */
     background-color: #FFFFFF;
@@ -51,4 +42,24 @@
     margin-top: 10px;
     margin-bottom: 25px;
     font-size: 20px;  
+    align-self: center;
+    border: none;
+}
+
+.contenedor-error{
+    display: flex;
+    flex-direction: column;
+    padding: 6vw;
+    justify-content: center;
+}
+
+.boton-buscar{
+    align-self: center;
+   
+    justify-items: center;
+}
+
+.btnbuscar{
+    background-color: #f08732;
+    color: black;
 }
