--- a/client/src/Components/ForoPortada/ForoPortada.css
+++ b/client/src/Components/ForoPortada/ForoPortada.css
@@ -1,31 +1,31 @@
 .proyectocontainer{
-    padding: 1vw 5vw 1vw 5vw;
+    padding: 10vw 5vw 1vw 5vw;
     background-color: #F1EEDE;
     font-family: Montserrat;
     display: flex;
     flex-direction: column;
 }
-.tittleforo{
+.tittleforo22{
     font-size: 3vw;
-    text-align: center;
-    align-self: center; 
     margin-bottom: 0.5vw;
 }
-.foroPortada-line{
+.foroPortada-line22{
     background: #f17a09;
     height: 0.2vw;
-    width: 8vw;
-    margin-top: 0;
-    align-self: center; 
-    margin-bottom: 2vw;
-    margin-left: 575px;
+    width: 12vw; 
+    
+}
+
+.contenedor-22{
+    display: flex;
+    justify-content: center;
+    align-self: center;
+    flex-direction: column;
 }
 .btnbuscar{
     width: 150px;
-    height: 45px; 
+    height: 3vw; 
     border-radius:20px;
-    margin-left: 40px;
-    margin-top: 15px;
     justify-content:center;
     align-items:center;
     align-content: center;
@@ -33,6 +33,8 @@
     font-size: 25px;
     color: #878BD9;
     font-weight: bold;
+    color: black;
+    margin: 1vw;
 }
 .inputbusqueda{
     /* border:  1px solid #C4C4C4; */
@@ -42,9 +44,21 @@
     text-align:center;
     border-radius: 20px;
     width: 500px;
-    height: 35px;
+    height: 3vw; 
     margin-left: 0px;
     margin-top: 10px;
     margin-bottom: 25px;
     font-size: 20px;  
+    align-self: center;
+    border: none;
+
+}
+
+.container-busqueda22{
+    display: flex;
+    justify-content: center;
+    
+    align-content: center;
+    padding: 2vw;
+
 }
