--- a/client/src/Components/Sidebar/PopupsSideBar.css
+++ b/client/src/Components/Sidebar/PopupsSideBar.css
@@ -23,9 +23,9 @@
     margin-bottom: 2vw;
 }
 .fondo-popup{
-    height: 100%;
+    height: 190vh;
     width: 100%;
-    background-color: rgba(122, 124, 124, 0.514);
+    background-color: rgba(156, 177, 177, 0.219);
     z-index: 12;
     position: absolute;
     top: 0px;
