--- a/client/src/Components/Carrusel/Carrusel.css
+++ b/client/src/Components/Carrusel/Carrusel.css
@@ -9,7 +9,8 @@
     width:700px;
     height:400px;
     border-radius:10px;
-    margin-left:320px;
+    margin-left: 100px;
+    object-fit: cover;
   }
   .right-arrow{
     position:absolute;
