--- a/client/src/Components/ForoNoticias/ForoNoticias.css
+++ b/client/src/Components/ForoNoticias/ForoNoticias.css
@@ -14,12 +14,11 @@
     margin:auto;
 
 }
-.foroNoticias-line{
+.lineaaa{
     background: #f17a09;
     height: 0.2vw;
-    width: 25vw;
+    width: 180px;
     margin: auto;
-    margin-right: 35vw;
     align-self: center; 
     margin-bottom: 2vw;
 }
@@ -139,4 +138,16 @@
     margin: auto;
     margin-left: 99px;
     margin-top: 25px;
+}
+
+.padreImg {
+    display: flex;
+    justify-content: center;
+}
+
+.img-detail {
+    object-fit: cover;
+    max-width: 1100px;
+    max-height: 900px;
+    border-radius: 8%;
 }
