--- a/client/src/Pages/RegistrateLugarSeguro.css
+++ b/client/src/Pages/RegistrateLugarSeguro.css
@@ -1,9 +1,10 @@
+#F1EEDE
 .pageregistro{
    padding: 20vw 5vw 1vw 5vw;
    font-family: 'Montserrat';
    justify-content: center;
    text-align: center;
-   margin-top: 0px;
+    margin: auto;
    background-color: #F1EEDE;
    display: flex;
    flex-direction: column;
