--- a/client/src/Components/ForoNoticias/ForoNoticias.css
+++ b/client/src/Components/ForoNoticias/ForoNoticias.css
@@ -14,12 +14,11 @@
     margin:auto;
 
 }
-.foroNoticias-line{
+.foroNoticiass-line{
     background: #f17a09;
     height: 0.2vw;
-    width: 25vw;
+    width: 11vw;
     margin: auto;
-    margin-right: 35vw;
     align-self: center; 
     margin-bottom: 2vw;
 }
