--- a/client/src/Pages/RegistrateLugarSeguro.css
+++ b/client/src/Pages/RegistrateLugarSeguro.css
@@ -1,6 +1,6 @@
-#F1EEDE
-.pageregistro{
-   padding: 20vw 5vw 1vw 5vw;
+
+.pageregistro99{
+   padding: 10vw 5vw 1vw 5vw;
    font-family: 'Montserrat';
    justify-content: center;
    text-align: center;
