--- a/client/src/Components/Carrusel/Carrusel.css
+++ b/client/src/Components/Carrusel/Carrusel.css
@@ -41,3 +41,16 @@
     transition-duration:1s;
     /* transform: scale(1:20); */
   }
+  .centrado{
+    position: absolute;
+    top: 10%;
+    left: 63%;
+    transform: translate(-50%, -50%);
+    color:#F35D08;
+    background-color: rgba(249, 244,244, 0.2);
+    font-size:24pt;
+    font-weight: 600;
+    text-shadow: rgba(0,0,0,0.1) -1px 0, rgba(0,0,0,0.1) 0 -1px;
+    border-radius:5px;
+}
+
