--- a/client/src/Components/ForoNoticias/ForoNoticias.css
+++ b/client/src/Components/ForoNoticias/ForoNoticias.css
@@ -86,7 +86,7 @@
     width: 76vw; 
     height: 80px;
     margin:auto;
-    margin-top: 10px;
+    margin-top: 20px;
     font-size: 20px;  
 }
 .btnenviarcomentario{
@@ -95,14 +95,17 @@
     width: 150px;
     height: 45px; 
     border-radius:20px;
-    margin:auto;
-    margin-right: 100px;
-    margin-top: 15px;
+    margin-left:100px;
+    margin-right: 50px;
+    margin-top: 20px;
     justify-content:center;
     align-items:center;
     align-content: center;
     display:fixed;
     font-size: 20px;
+}
+.contenedorbot{
+ display:flex;
 }
 .inputpalabra{
     background-color: #FFFFFF;
@@ -131,15 +134,593 @@
 .btnmascomentarios{
     border:  1px solid #FEA166;
     background-color: #FEA166;
-    width: 190px;
-    height: 30px; 
+    width: 200px;
+    height: 45px; 
     border-radius:20px;
+    margin:auto;
+    margin-right: 50px;
+    margin-top: 20px;
+    justify-content:center;
+    align-items:center;
+    align-content: center;
     display:fixed;
-    font-size: 16px;
-    margin: auto;
-    margin-left: 99px;
-    margin-top: 25px;
+    font-size: 20px;
 }
+
+.messages-btn {
+    border-radius: 4px 0 0 4px;
+    position: absolute;
+    right: 0;
+    top: 58px;
+    background-color: var(--message-btn);
+    border: none;
+    color: var(--main-color);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 4px;
+    display: none;
+  }
+  .mapa{
+    width:800px;
+    height: 100%;
+    overflow: hidden;
+    padding: 16px 24px 24px 0;
+  }
+  .app-content {
+    display: flex;
+    height: 100%;
+    overflow: hidden;
+    padding: 20px 24px 24px 20px;
+  }
+  
+  .app-sidebar {
+    padding: 40px 16px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .app-sidebar-link {
+    color: var(--main-color);
+    color: var(--link-color);
+    margin: 16px 0;
+    transition: .2s;
+    border-radius: 50%;
+    flex-shrink: 0;
+    width: 40px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .app-sidebar-link-active {
+    color: var(--main-color);
+    color: var(--link-color);
+    margin: 16px 0;
+    transition: .2s;
+    border-radius: 50%;
+    flex-shrink: 0;
+    width: 40px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--link-color-active-bg);
+    color: var(--link-color-active);
+  }
+  
+  
+  
+  
+  
+  
+  .app-container {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      height: 100%;
+      background-color: var(--app-container);
+      transition: .2s;
+      max-width: 1800px;
+  
+    }
+    .app-header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      width: 100%;
+      padding: 16px 24px;
+      position: relative;
+      
+    }
+  .app-left{
+      display: flex;
+      align-items: center;
+    }
+  .app-right{
+      display: flex;
+      align-items: center;
+    }
+  
+  .app-left { flex-grow: 1; }
+  
+  .app-right{
+    margin-left: 10px; 
+  }
+  
+  .app-icon {
+    width: 26px;
+    height: 2px;
+    border-radius: 4px;
+    background-color: var(--main-color);
+    position: relative;
+  }
+  
+  .app-icon-before {
+    content: '';
+    position: absolute;
+    width: 12px;
+    height: 2px;
+    border-radius: 4px;
+    background-color: var(--main-color);
+    left: 50%;
+    transform: translatex(-50%);
+  }
+  
+  .mode-switch {
+    background-color: transparent;
+    border: none;
+    padding: 0;
+    color: var(--main-color);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .app-icon-after {
+    content: '';
+    position: absolute;
+    width: 12px;
+    height: 2px;
+    border-radius: 4px;
+    background-color: var(--main-color);
+    left: 50%;
+    transform: translatex(-50%);
+  }
+  
+  .app-name {
+    color: var(--main-color);
+    margin: 0;
+    font-size: 20px;
+    line-height: 24px;
+    font-weight: 700;
+    margin: 0 32px;
+  }
+  
+  .search-wrapper {
+    border-radius: 20px;
+    background-color: var(--search-area-bg);
+    padding-right: 12px;
+    height: 40px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    max-width: 480px;
+    color: var(--light-font);
+    box-shadow: 0 2px 6px 0 rgba(136,148,171,.2),0 24px 20px -24px rgba(71,82,107,.1);
+    overflow: hidden;
+  }
+  
+  .search-input {
+    border: none;
+    flex: 1;
+    outline: none;
+    height: 100%;
+    padding: 0 20px;
+    font-size: 16px;
+    background-color: var(--search-area-bg);
+    color: var(--main-color);
+    
+  }
+  
+  .input::placeholder{
+      color: var(--main-color);
+      opacity: .6;
+  }
+  
+  .add-btn {
+    color: #fff;
+    background-color: var(--button-bg);
+    padding: 0;
+    border: 0;
+    border-radius: 50%;
+    width: 32px;
+    height: 32px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .btn-icon {
+    width: 26px;
+    height: 2px;
+    border-radius: 4px;
+    background-color: var(--main-color);
+    position: relative;
+  }
+  .notification-btn {
+    color: var(--main-color);
+    padding: 0;
+    border: 0;
+    background-color: transparent;
+    height: 32px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .profile-btn {
+    padding: 0;
+    border: 0;
+    background-color: transparent;
+    display: flex;
+    align-items: center;
+    padding-left: 12px;
+    border-left: 2px solid #ddd;
+  }
+  .img {
+    width: 32px;
+    height: 32px;
+    object-fit: cover;
+    border-radius: 50%;
+    margin-right: 4px;
+  }
+  .spn {
+    color: var(--main-color);
+    font-size: 16px;
+    line-height: 24px;
+    font-weight: 700;
+  }
+  
+  .projects-section {
+    flex: 2;
+    background-color: var(--projects-section);
+    border-radius: 32px;
+    padding: 32px 32px 0 32px;
+    overflow: hidden;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .projects-section-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 24px;
+    color: var(--main-color);
+    padding-left:40px;
+    padding-top:40px;
+  }
+  
+  .time {
+    font-size: 20px;
+  }
+  
+  .project-section-line {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-bottom: 32px;
+  }
+  
+  .projects-status {
+    display: flex;
+  }
+  
+  .item-status {
+    display: flex;
+    flex-direction: column;
+    margin-right: 16px;
+  }
+  
+  .status-number {
+    font-size: 24px;
+    line-height: 32px;
+    font-weight: 700;
+    color: var(--main-color);
+  }
+  
+  .status-type {
+    position: relative;
+    padding-right: 24px;
+    color: var(--secondary-color);
+  }
+  
+  .view-actions {
+    display: flex;
+    align-items: center;
+  }
+  
+  .view-btn {
+    width: 36px;
+    height: 36px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 6px;
+    border-radius: 4px;
+    background-color: transparent;
+    border: none;
+    color: var(--main-color);
+    margin-left: 8px;
+    transition: .2s;
+  }
+    
+  .view-btn-active {
+      background-color: var(--link-color-active-bg);
+      color: var(--link-color-active);
+    }
+    
+    .view-btn-active :not(.active):hover {
+      background-color:  var(--link-color-hover);
+      color: var(--link-color-active);
+    }
+    .project-boxes {
+      margin: 0 -8px;
+      overflow-y: auto;
+    }
+  
+    .project-box {
+      --main-color-card: #dbf6fd;
+      border-radius: 30px;
+      padding: 16px;
+      background-color: var(--main-color-card);
+    }
+      
+    .project-box-header {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        margin-bottom: 16px;
+        color: var(--main-color);
+    }
+  
+  
+        
+   .span2 {
+          color: #4A4A4A;
+          opacity: .7;
+          font-size: 14px;
+          line-height: 16px;
+        }
+      
+  .project-box-header-content-header {
+        text-align: center;
+        margin-bottom: 16px;
+        p { margin: 0; }
+      }
+      
+  .project-box-wrapper {
+    --main-color-card: #dbf6fd;
+    border-radius: 30px;
+    padding: 16px;
+    background-color: var(--main-color-card);
+        padding: 8px;
+        transition: .2s;
+      }
+      .project-btn-more {
+        padding: 0;
+        height: 14px;
+        width: 24px;
+        height: 24px;
+        position: relative;
+        background-color: transparent;
+        border: none;
+        flex-shrink: 0;
+      }    
+  .project-boxes {
+    margin: 0 -8px;
+    overflow-y: auto;
+  }
+  .jsGridView {
+      display: flex;
+      flex-wrap: wrap;
+      
+      .project-box-wrapper {
+        width: 33.3%;
+      }
+    }
+    
+    .project-box-content-header {
+      order: 1;
+      max-width: 120px;
+    }
+  
+    .box-content-header {
+      font-size: 16px;
+      line-height: 24px;
+      font-weight: 700;
+      opacity: .7;
+    }
+    
+    .box-content-subheader {
+      font-size: 14px;
+      line-height: 24px;
+      opacity: .7;
+    }
+  
+  
+    .box-progress {
+      display: block;
+      height: 4px;
+      border-radius: 6px;
+      
+    }
+    .box-progress-bar {
+        width: 100%;
+        height: 4px;
+        border-radius: 6px;
+        overflow: hidden;
+        background-color: #fff;
+        margin: 8px 0;
+      }
+      
+      .box-progress-header {
+        font-size: 14px;
+        font-weight: 700;
+        line-height: 16px;
+        margin: 0;
+      }
+      
+      .box-progress-wrapper {
+        
+      }
+  
+      .box-progress-percentage {
+        text-align: right;
+        margin: 0;
+        font-size: 14px;
+        font-weight: 700;
+        line-height: 16px;
+      }
+  
+      .project-box-footer {
+        display: flex;
+        justify-content: space-between;
+        padding-top: 16px;
+        position: relative;
+      }
+      
+      .project-box-footer:after {
+        content: '';
+        position: absolute;
+        background-color: rgba(255,255,255,0.6);;
+        width: calc(100% + 32px);
+        top: 0;
+        left: -16px;
+        height: 1px;
+      }
+  
+  
+  .participants {
+    display: flex;
+    align-items: center;
+  }
+  
+  .imagebox{
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    overflow: hidden;
+    object-fit: cover;
+  }
+  
+  .add-participant {
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    border: none;
+    background-color: rgba(255,255,255,0.6);
+    margin-left: 6px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0;
+  }
+  
+  .days-left {
+    background-color: rgba(255,255,255,0.6);
+    font-size: 12px;
+    border-radius: 20px;
+    flex-shrink: 0;
+    padding: 6px 16px;
+    font-weight: 700;
+  }
+  .project-box-content-header {
+    order: 1;
+    max-width: 120px;
+  }
+  
+  .project-box-header {
+    order: 2;
+  }
+  
+  .project-box-footer {
+    order: 3;
+    padding-top: 0;
+    flex-direction: column;
+    justify-content: flex-start;
+  }
+  
+  .messages-section {
+    flex-shrink: 0;
+    padding-bottom: 32px;
+    background-color: var(--projects-section);
+    margin-left: 24px;
+    flex: 1;
+    width: 100%;
+    border-radius: 30px;
+    position: relative;
+    overflow: auto;
+    transition: all 300ms cubic-bezier(0.19, 1, 0.56, 1);
+  }
+  
+  .messages-close {
+    position: absolute;
+    top: 12px;
+    right: 12px;
+    z-index: 3;
+    border: none;
+    background-color: transparent;
+    color: var(--main-color);
+    display: none;
+  }
+  
+  .message-box {
+    border-top: 1px solid var(--message-box-border);
+    padding: 16px;
+    display: flex;
+    align-items: flex-start;
+    width: 100%;
+  }
+  .message-box:hover {
+      background-color: var(--message-box-hover);
+      border-top-color: var(--link-color-hover);
+      
+    }
+    .message-header {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      width: 100%;
+    } 
+    .otro {
+        font-size: 25px;
+        padding-left:30px;
+        margin-top:10px;
+      }
+    .fecha {
+    margin-left:10px;
+    margin-top:17px;
+    font-size: 14px;
+    }
+      .btninput{
+        border:  1px solid #FEA166;
+        background-color: #FEA166;
+        width: 364px;
+        height: 52px; 
+        border-radius:20px;
+        margin-top: 20px;
+        justify-content:center;
+        align-items:center;
+        align-content: center;
+        display:fixed;
+        font-size: 25px;
+    }
 
 .padreImg {
     display: flex;
