--- a/client/src/Components/ForoNoticias/ForoNoticias.css
+++ b/client/src/Components/ForoNoticias/ForoNoticias.css
@@ -125,11 +125,8 @@
     background-color:  #FFFFFF;
     text-align:center;
     border-radius: 20px;
-    width: 180px;
-    height: 30px; 
-    margin-left: 140px;
-    margin-top: 10px;
     font-size: 12px; 
+    margin-top: -15px;
 }
 .btnmascomentarios{
     border:  1px solid #FEA166;
@@ -501,7 +498,6 @@
   .project-box-header-content-header {
         text-align: center;
         margin-bottom: 16px;
-        p { margin: 0; }
       }
       
   .project-box-wrapper {
@@ -530,9 +526,6 @@
       display: flex;
       flex-wrap: wrap;
       
-      .project-box-wrapper {
-        width: 33.3%;
-      }
     }
     
     .project-box-content-header {
@@ -575,10 +568,7 @@
         line-height: 16px;
         margin: 0;
       }
-      
-      .box-progress-wrapper {
-        
-      }
+
   
       .box-progress-percentage {
         text-align: right;
@@ -702,7 +692,8 @@
         font-size: 25px;
         padding-left:30px;
         margin-top:10px;
-      }
+
+    }
     .fecha {
     margin-left:10px;
     margin-top:17px;
@@ -732,4 +723,25 @@
     max-width: 1100px;
     max-height: 900px;
     border-radius: 8%;
+}
+
+
+.styleContCom {
+    display: flex;
+    justify-content: center;
+    margin-top: 100px;
+    width: 1000px;
+}
+
+.lineaCom {
+    background: black;
+    width: 500px;
+    height: 1px;
+    align-self: center;
+    margin-top: 5px;
+}
+
+.message-content {
+    justify-content: center;
+    
 }
