--- a/client/src/Components/ForoNoticias/ForoNoticias.css
+++ b/client/src/Components/ForoNoticias/ForoNoticias.css
@@ -368,13 +368,13 @@
     padding-left: 12px;
     border-left: 2px solid #ddd;
   }
-  .img {
+  /* .img {
     width: 32px;
     height: 32px;
     object-fit: cover;
     border-radius: 50%;
     margin-right: 4px;
-  }
+  } */
   .spn {
     color: var(--main-color);
     font-size: 16px;
