--- a/client/src/Components/Mujeres_en_Salud/HealtCard.css
+++ b/client/src/Components/Mujeres_en_Salud/HealtCard.css
@@ -13,6 +13,7 @@
     padding: 2vw;
     box-shadow: 1px 1px 8px rgb(201, 201, 201);
     line-height: 2vw;
+    box-sizing: content-box;
     flex-wrap: wrap;   
     position: relative;
 }
