--- a/client/src/Components/Sidebar/Sidebar.css
+++ b/client/src/Components/Sidebar/Sidebar.css
@@ -1,21 +1,20 @@
 
 .contenedorsidebar {
   width: 350px;
-  height: 800px;
-  justify-content: center;
-  position: absolute;
-  z-index: 5;
-  top: 350px;
-  font-family: Montserrat;
-  margin-left: 20px;
-  border-radius: 25px;
+  height: 730px;
   display: flex;
   flex-direction: column;
-  flex: 0 0 100%;
-  margin-bottom: 12px; 
+  position:absolute;
+  z-index: 5;
+  top: 27vw;
+  margin-top: 0vw;
+  font-family: Montserrat;
+  margin-left: 1VW;
+  border-radius: 25px;
   background-color: white;
-  margin-top: 70px;
-  padding: 3vh;
+  padding: 2vw;
+  
+  
 
 }
 
@@ -89,8 +88,11 @@
 .cont {
   border-radius: 15px;
   width: 205px;
-  margin: auto;
-  margin-top: 40px;
+  background-color: #890cbb70;
+  align-self: center;
+  margin-top: 2vw;
+  margin-bottom: 1vw;
+  padding: 0.5vw;
 }
 
 
@@ -108,12 +110,20 @@
 .denuncia {
   color: #000;
   align-self: center;
+  padding: 1vw 0vw 1vw 0vw;
 }
 
 .denunciaTit {
   color: #000;
+  font-size: 0.8vw;
+  align-self: center;
+  
 }
-
+.denuncia-boton{
+  font-size: 0.8vw;
+  width: fit-content;
+  margin-left: 0.5vw;
+}
 .btnRes {
   background-color: #f17909;
   width: 210px;
@@ -134,27 +144,24 @@
   
 }
 
-.denuncia:hover {
-  transform: scale(1.20);
-  transition: 5.s;
-}
 
 .btnSide:hover {
   background-color: rgb(243, 48, 48);
 }
 
 .cont-denuncia {
-  margin: auto;
-  margin-top: -20px;
+  margin-top: 1vw;
+  display: flex;
+ 
+  flex-wrap: wrap;
+  
 }
 
-.sidebar-align{
-  display: flex;
-  flex-direction: column;
-}
 
 .denunciar{
   color: #000;
+  
+
   
 }
 .comentario {
@@ -164,6 +171,7 @@
     font-weight: 500;
     color: #000;
     border-radius: 10px;
+    padding: 1vw 0vw 1vw 0vw;
 }
 
 a.comentario:hover{
@@ -175,18 +183,29 @@ a.comentario:hover{
   justify-content: center;
   margin: auto;
   margin-top: 10px;
+  
+ 
+
 }
 
 .conte {
   background-color: #FFFFFF;
-  box-shadow: 0 0 1rem rgba(51, 51, 51, 0.404);
+  box-shadow: 0 0 1rem rgba(51, 51, 51, 0.204);
   width: 300px; 
   height: 40px; 
   border-radius: 8px;
+  display: flex;
+  align-self: center;
+  justify-content: center;
+  padding-top: 10px;
+  
 }
 
 .comm-scrll {
+  height: 25vh;
   overflow-y: scroll;
-  max-height: 20vh;
+  max-height: 25vh;
+  background-color: rgb(253, 253, 253);
+  margin-bottom: 2vw;
 
 }
