fix contenido noticia

--- a/client/src/Components/ForoNoticias/ForoNoticias.css
+++ b/client/src/Components/ForoNoticias/ForoNoticias.css
@@ -62,6 +62,7 @@
     margin-right: 1.4vw;
     padding-top: 1.4vw;
     padding-bottom: 1.4vw;
+    white-space: pre-line;
  
 }
 .comentariosforo{
